<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/description_login_background"
        android:scaleType="fitXY"
        android:src="@drawable/bg_ca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/content_login"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/content_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/content_login"
        android:layout_width="265dp"
        android:layout_height="309dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/contract_number"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_account_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/account"
                app:layout_constraintTop_toBottomOf="@+id/account" />

            <EditText
                android:id="@+id/pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/access_code"
                android:inputType="numberPassword"
                app:layout_constraintEnd_toEndOf="@+id/account"
                app:layout_constraintStart_toStartOf="@+id/account"
                app:layout_constraintTop_toBottomOf="@+id/tv_account_error" />

            <TextView
                android:id="@+id/tv_pw_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/pw"
                app:layout_constraintTop_toBottomOf="@+id/pw" />

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/remember_me"
                app:layout_constraintStart_toStartOf="@+id/pw"
                app:layout_constraintTop_toBottomOf="@+id/tv_pw_error" />

            <TextView
                android:id="@+id/error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/holo_red_light"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/sign_in"
                app:layout_constraintTop_toBottomOf="@+id/remember_me" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/colorOrange"
                android:hint="@string/btn_login"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/pw"
                app:layout_constraintStart_toStartOf="@+id/pw"
                app:layout_constraintTop_toBottomOf="@+id/error"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/how_to_join"
                android:textColorHint="@color/colorOrange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/sign_in"
                app:layout_constraintStart_toStartOf="@+id/sign_in"
                app:layout_constraintTop_toBottomOf="@+id/sign_in" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/maps_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:drawableTop="@drawable/ic_action_location"
        android:focusable="true"
        android:text="@string/agencies"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/content_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/contacts_btn"
        app:layout_constraintTop_toBottomOf="@+id/content_login" />

    <TextView
        android:id="@+id/contacts_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableTop="@drawable/ic_phone_black"
        android:focusable="true"
        android:gravity="bottom"
        android:text="@string/contacts"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/maps_btn"
        app:layout_constraintEnd_toStartOf="@+id/maps_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/content_login" />

</android.support.constraint.ConstraintLayout>