<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fingerprint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/fingerprint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fingerprint_description"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NewApi" />

    <ImageView
        android:id="@+id/fp_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/description_fingerprint_icon"
        android:src="@drawable/ic_finger_print"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fingerprint_description" />

    <TextView
        android:id="@+id/status_failure_fp"
        style="@android:style/TextAppearance.Material.Body1"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/fingerprint_hint"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/fp_icon"
        app:layout_constraintStart_toEndOf="@+id/fp_icon"
        app:layout_constraintTop_toTopOf="@+id/fp_icon"
        tools:ignore="NewApi" />

</android.support.constraint.ConstraintLayout>